Update open web beans